<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#F7E688"
    tools:context="com.marcosvaldi.adventure.MainActivity">



    <ImageView
        android:id="@+id/activity_main_scene_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/aventura_logo"
        />

    <TextView
        android:id="@+id/activity_main_scene_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:text="ejecutando"
        android:background="@drawable/borde_texto"
        android:layout_marginTop="150dp"
        android:padding="10dp"
        android:textAlignment="center"
        />


    <ImageButton
        android:id="@+id/activity_main_norte"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@android:drawable/arrow_up_float"
        android:text="@string/norte"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@drawable/borde_redondo"
        android:layout_below="@id/activity_main_scene_text"
        android:layout_toRightOf="@+id/activity_main_oeste"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
    />

    <ImageButton
        android:id="@+id/activity_main_sur"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@android:drawable/arrow_down_float"
        android:text="@string/sur"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@drawable/borde_redondo"
        android:layout_below="@+id/activity_main_look"
        android:layout_toRightOf="@+id/activity_main_oeste"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/activity_main_este"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/este"
        android:background="@drawable/borde_redondo"
        android:layout_below="@id/activity_main_norte"
        android:layout_toRightOf="@id/activity_main_look"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/activity_main_oeste"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/oeste"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@drawable/borde_redondo"
        android:layout_below="@id/activity_main_norte"
        android:layout_marginRight="10dp"
        />

    <ImageButton
        android:id="@+id/activity_main_look"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/target"
        android:text="@string/look"
        android:textSize="15sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@drawable/borde_redondo"
        android:layout_below="@id/activity_main_norte"
        android:layout_toRightOf="@id/activity_main_oeste"
        />

    <Button
        android:id="@+id/activity_main_inventory"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/inventory"

        android:layout_alignParentRight="true"
        android:layout_below="@id/activity_main_scene_text"
        android:layout_marginTop="18dp"
        style="@style/ActionButton_style"

        />

    <Button
        android:id="@+id/activity_main_take"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/take"
        android:layout_alignParentRight="true"
        android:layout_below="@id/activity_main_inventory"
        android:layout_marginTop="5dp"
        style="@style/ActionButton_style"
        />

    <Button
        android:id="@+id/activity_main_drop"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/drop"
        android:layout_alignParentRight="true"
        android:layout_below="@id/activity_main_take"
        android:layout_marginTop="5dp"
        style="@style/ActionButton_style"
        />

    <ImageButton
        android:id="@+id/activity_main_help"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@android:drawable/ic_menu_help"
        android:background="@drawable/borde_redondo"
        android:text="@string/help"
        android:textSize="15sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_below="@id/activity_main_drop"
        android:layout_marginTop="5dp"
        />

    <fragment
        android:name="com.marcosvaldi.adventure.InventoryFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_inventory"

        />


</RelativeLayout>
